Added locales to the print screen method
The method that take prints from the emulators or devices is implemented
by Calabash and is only in english.
This commit adds a new base step that take prints and its regex can be
translated using the locale files.

--- a/lib/cs/bdd/locales/en.yml
+++ b/lib/cs/bdd/locales/en.yml
@@ -16,6 +16,7 @@ en:
     wait_progress_bar: "I (?:wait|waited) for the progress bar to vanish"
     should_see_page: "I should see the page '(.*?)'"
     should_see_page_that_contains: "I should see a page that contains '(.*?)'"
+    take_print: "take picture"
   directions:
     up: 'up'
     down: 'down'
