--- a/lib/cs/bdd/locales/pt.yml
+++ b/lib/cs/bdd/locales/pt.yml
@@ -16,7 +16,9 @@ pt:
     wait_progress_bar: "Eu (?:espero|esperei) até a barra de progresso sumir"
     should_see_page: "Eu deveria ver a página '(.*?)'"
     should_see_page_that_contains: "Eu deveria ver uma página que contem '(.*?)'"
-    take_print: "faço um print"    
+    take_print: "faço um print"
+    been_in_page: "que eu (?:estou|estava) na (?:página|tela) (?:de) '(.*?)'"
+    move_to_page: "eu (?:devo|deveria) estar na (?:página|tela) (?:de) '(.*?)'"
   directions:
     up: 'cima'
     down: 'baixo'
