Added base method missing and restart app step
Added a method missing in the android and ios base screens. With this
method, all elements in the android or ios screens have a touch, visible
and enter

Added the step and function to restart the app.

--- a/lib/cs/bdd/locales/en.yml
+++ b/lib/cs/bdd/locales/en.yml
@@ -19,6 +19,7 @@ en:
     take_print: "take picture"
     been_in_page: "I am at (?:page|screen) '(.*?)'"
     move_to_page: "I went to (?:page|screen) '(.*?)'"
+    restart_app: "I restart the app"
   directions:
     up: 'up'
     down: 'down'
