--- a/lib/cs/bdd/locales/pt.yml
+++ b/lib/cs/bdd/locales/pt.yml
@@ -1,24 +1,24 @@
 pt:
   android_only: "(Somente Android)"
   ios_only: "(Somente iOS)"
-  first_scenario: "Primeiro Cenário"
+  first_scenario: "Primeiro Cenario"
   comments:
     trait: "Identificador da tela"
     insert_steps: "Insira os passos"
     elements: "Declare todos os elementos da tela"
     actions: "Declare todas as acoes da tela"
   steps:
-    drag_until: 'que Eu (?:arrastei|arrasto) a tela para (baixo|cima|esquerda|direita) até ver o elemento "(.*?)"'
-    page_contains: "que Eu estou em uma página que contem '(.*?)'"
+    drag_until: 'que Eu (?:arrastei|arrasto) a tela para (baixo|cima|esquerda|direita) ate ver o elemento "(.*?)"'
+    page_contains: "que Eu estou em uma pagina que contem '(.*?)'"
     drag_number_of_times: 'Eu arrasto a tela para (esquerda|direita|baixo|cima) (\d+) vezes'
     touch_element: 'Eu (?:clico|cliquei) no elemento "(.*?)"'
     drag_screen: "Eu arrasto a tela para (baixo|cima|esquerda|direita)"
-    wait_progress_bar: "Eu (?:espero|esperei) até a barra de progresso sumir"
-    should_see_page: "Eu deveria ver a página '(.*?)'"
-    should_see_page_that_contains: "Eu deveria ver uma página que contem '(.*?)'"
-    take_print: "faço um print"
-    been_in_page: "que eu (?:estou|estava) na (?:página|tela)(?: de|) '(.*?)'"
-    move_to_page: "eu (?:devo|deveria) estar na (?:página|tela)(?: de|) '(.*?)'"
+    wait_progress_bar: "Eu (?:espero|esperei) ate a barra de progresso sumir"
+    should_see_page: "Eu deveria ver a pagina '(.*?)'"
+    should_see_page_that_contains: "Eu deveria ver uma pagina que contem '(.*?)'"
+    take_print: "faco um print"
+    been_in_page: "que eu (?:estou|estava) na (?:pagina|tela)(?: de|) '(.*?)'"
+    move_to_page: "eu (?:devo|deveria) estar na (?:pagina|tela)(?: de|) '(.*?)'"
     restart_app: "(?:Eu |)reiniciar o aplicativo"
   directions:
     up: 'cima'
